Mobile overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body {
 	line-height: 1.4;
 	overflow-x: hidden;
 }
+#megawrap {
+	overflow-x: hidden;
+	position: relative;
+}
 h1 {
 	text-align: center;
 	font-size: 4em;
